# paper_2023

./: Dockerfile  README.md  Snakefile  docker-compose.yml
data/graph/: nodes.csv
experiments-lib/: pyproject.toml
experiments-lib/experiments_lib/cli/: build_graph.py  export_to_gephi.py  export_to_germ_format.py  extract_due_dates.py  get_business_subgraph.py  get_insolvency_data.py  get_retail_subgraph.py
experiments-lib/experiments_lib/db/: __init__.py  sql_query_service.py
experiments-lib/experiments_lib/expressions/: caseless_accentless_literal.py  date_expr.py  due_date_expr.py  sequence.py  unicode_chars.py
experiments-lib/experiments_lib/extractors/: __init__.py  due_date_extractor.py
experiments-lib/experiments_lib/gephi/: postprocess_business_graph.py  postprocess_retail_graph.py
experiments-lib/experiments_lib/models/: creditor_category.py
experiments-lib/experiments_lib/models/pb/: ocr_pb2.py
experiments-lib/experiments_lib/template_tools/: geometry.py  template_matcher.py
experiments-lib/experiments_lib/util/: lists.py  strings.py
experiments-lib/tests/expressions/: test_due_date_expr.py
nb_templates/: analyze_business_patterns.ipynb  analyze_retail_patterns.ipynb  check_both_graphs.ipynb  check_graph.ipynb
nb_templates/.ipynb_checkpoints/: analyze_business_patterns-checkpoint.ipynb  check_graph-checkpoint.ipynb
