[tool.poetry]
name = "experiments-lib"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.8"
jupyterlab = "^3.4.2"
snakemake = "^7.8.1"
protobuf = "^3.17.3"
toolz = "^0.11.2"
Levenshtein = "^0.18.1"
Shapely = "^1.8.2"
regex = "^2022.4.24"
pyparsing = "^3.0.9"
Unidecode = "^1.3.4"
loguru = "^0.6.0"
click = "^8.1.3"
tqdm = "^4.64.0"
pandas = "^1.4.3"
pyarrow = "^8.0.0"
jupyter = "^1.0.0"
pydantic = "^1.9.1"
SQLAlchemy = "^1.4.39"
psycopg2 = "^2.9.3"
datetime-truncate = "^1.1.1"
matplotlib = "^3.5.2"
networkx = "^2.8.4"
gspan-mining = { git = "https://github.com/zviri/gSpan.git", rev = "333379e" }
black = "^22.8.0"
papermill = "^2.4.0"
apyori = "^1.1.2"
seaborn = "^0.12.1"
scikit-learn = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
